fixed menu breakpoint on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -229,7 +229,7 @@ and (orientation : landscape) {
 }
 
 /* mobile navbar */
-@media (min-width: 866px) {
+/*@media (min-width: 866px) {
 .navbar-collapse {
   width: auto;
   border-top: 0;
@@ -248,12 +248,55 @@ and (orientation : landscape) {
 .navbar-fixed-top .navbar-collapse, .navbar-static-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
   padding-left: 0;
   padding-right: 0;
-}}
+}}*/
 
-@media only screen
-and (max-width: 865px)
-and (orientation: landscape) {
-    .navbar-header {
+@media only screen and (max-device-width: 480px) {
+  .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 20px;
+        padding-bottom: 20px;
+	font-size: 30px;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+
+    .navbar-default .navbar-toggle {
+      width: 80px;
+      height: 80px;
+      font-size: 40px;
+    }
+
+    .orobix-logo-menu {
+      padding-top: 30px!important;
+    }
+}
+
+@media (max-width: 865px) {
+  .navbar-header {
         float: none;
     }
     .navbar-toggle {
@@ -443,7 +486,7 @@ html, body {
 
   height: auto;
   max-width: 353px;
-  width: 50%;
+  /*width: 50%; TODO ie*/
   margin-top: 30px;
 
 }
